--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,6 @@ services:
       args:
         BACKEND_API_URL: 'http://localhost:8080'
     ports:
-      - "192.168.99.100:80:80"
+      - "localhost:80:80"
     depends_on:
       - api
